2003-12-17  Pierre-Luc Paour <gallery@paour.com> (1.2.1-b3)

	* Added alerts when ImageMagick or jpegtran are unavailable.
	* No longer showing rotate arrows when jpegtran is unavailable.

2003-12-16  Pierre-Luc Paour <gallery@paour.com> (1.2.1-b2)

	* Fixed Mac version: Native Mac build now works, uses screen menu bar
	  (not window menu bar), uses Command instead of Control for
	  accelerators, uses brushed metal appearance.
	* No longer displaying rotate arrows for pictures when jpegtran
	  is not present.
	* Pruned .java files from JSX library, making it lighter and resolving a
	  conflict with recent versions of IntelliJ.
	  
2003-12-09  Pierre-Luc Paour <gallery@paour.com> (1.2.1-b1)

	* Some apps wouldn't let you drag and drop pictures to GR. This is now fixed
	  and DnD should work from Canon Zoombrowser, Photoshop Album and probably
	  also Linux file managers. No thanks to an article in JavaWorld that
	  had bad code for DnD. Thanks to Jeff "logullo" for testing many debug
	  builds for me.

2003-11-25  Pierre-Luc Paour <gallery@paour.com> (1.2)

	* Release
	* Fixed the usual Java 1.3 bug.

2003-11-09  Pierre-Luc Paour <gallery@paour.com> (1.2-b15)

	* Fixed jpegtran execution on platforms other than Win32 (bad command line)
	* Added more debug when executing external commands (now prints stdout and stderr
	  from external command to log).
	* For Mac build, added im.properties and jpegtran.properties to img.jar
	  so Mac app can be completely self-contained.
	* thanks to Amedeo Paglione for suggesting above fixes.

2003-11-06  Pierre-Luc Paour <gallery@paour.com> (1.2-b14)

	* Almost complete rewrite of drag and drop code, fixing all the known bugs
	* Implemented cut-copy-paste for the list of pictures, so pictures can
	  now at long last be moved between albums (before upload)!
	* Fixed the QuickConfig preference not updating the other preference panels.
	  The fix is to close the preference dialog after QuickConfig is used, to
	  prevent conflicts.
