@@ -1,0 +1,49 @@
+# should ImageMagick support be enabled?
+enabled=true
+
+# path to the convert executable installed with ImageMagick
+imConvertPath=/usr/local/bin/convert
+
+# Filters
+#    Point
+#    Box
+#    Triangle
+#    Hermite
+#    Hanning
+#    Hamming
+#    Blackman
+#    Gaussian
+#    Quadratic
+#    Cubic
+#    Catrom
+#    Mitchell
+#    Lanczos		Default
+#    Bessel
+#    Sinc
+
+# filter used for resize of thumbnails
+imThumbnailResizeFilter=Box
+
+# filter used for resize of preview
+imPreviewResizeFilter=Lanczos
+
+# filter used for resize of upload
+imUploadResizeFilter=Lanczos
+
+# Formats
+#    jpg			Better for large images
+#    gif			Better for small images (8-bit)
+
+# filter used for resize of thumbnails
+imThumbnailResizeFormat=gif
+
+# filter used for resize of preview
+imPreviewResizeFormat=jpg
+
+# jpeg quality
+jpegQuality=80
+
+# ignore error code sent back by the executable
+# there's a bug in the Linux Java VM that returns a failed code
+# even when the executable sends back a success code...
+ignoreErrorCode=false
