@@ -1,0 +1,10 @@
+# should jpegtran support be enabled?
+enabled=true
+
+# path to the executable
+jpegtranPath=Gallery Remote.app/Contents/MacOS/jpegtran
+
+# ignore error code sent back by the executable
+# there's a bug in the Linux Java VM that returns a failed code
+# even when the executable sends back a success code...
+ignoreErrorCode=false
